<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="divide_zero">Cannot divide by zero</string>
    <string name="null_data">You forgot to field all fields</string>
    <string name="wrong_format">Check you input data for correctness</string>
    <string name="wrong_operation">Check you operation, app can calculate operations: +, -, *, /</string>
    <string name="input_num1">Input first number</string>
    <string name="input_operation">Input operation</string>
    <string name="input_num2">Input second number</string>
    <string name="calculate_result">Calculate</string>
    <string name="show_result">Result:</string>
</resources>